refactor: improves UI && UX && DX

--- a/src/assets/styles/fonts.scss
+++ b/src/assets/styles/fonts.scss
@@ -10,6 +10,26 @@
 
 @font-face {
   font-family: 'Fira Sans';
+  font-weight: 500;
+  font-style: italic;
+  font-display: swap;
+  src: local('Fira Sans'),
+  url('../fonts/FiraSans-Medium.woff2') format('woff2'),
+  url('../fonts/FiraSans-Medium.ttf') format('ttf');
+}
+
+@font-face {
+  font-family: 'Fira Sans';
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+  src: local('Fira Sans'),
+  url('../fonts/FiraSans-MediumItalic.woff2') format('woff2'),
+  url('../fonts/FiraSans-MediumItalic.ttf') format('ttf');
+}
+
+@font-face {
+  font-family: 'Fira Sans';
   font-weight: 700;
   font-style: normal;
   font-display: swap;
