--- a/src/module/location/ui/Search/ui/Search.scss
+++ b/src/module/location/ui/Search/ui/Search.scss
@@ -14,7 +14,7 @@
     gap: 5px;
     align-items: center;
 
-    background-color: white;
+    background-color: #eceef2;
     border-radius: 4px;
 }
 
@@ -34,7 +34,7 @@
     border: none;
 
     &:focus {
-        outline-width: 4px;
+        outline-width: 5px;
         outline-offset: 0;
     }
 }
