--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -1,8 +1,11 @@
+@use '../assets/styles/mixins';
+
 .app {
+  @include mixins.core-grid();
+
+  pointer-events: all;
+
   overflow: hidden;
-  display: grid;
-  grid-template-columns: 1fr 3fr 1fr;
-  grid-template-rows: auto 1fr auto;
   gap: 12px;
 
   min-height: 100vh;
@@ -10,6 +13,29 @@
   background-color: #eceef2;
 
   transition: background-color 0.35s ease-out;
+}
+
+.app_mode_fullFocus {
+  &::before {
+    pointer-events: none;
+    content: '';
+
+    position: absolute;
+    z-index: 100;
+    inset: 0;
+
+    opacity: 0.7;
+    background-color: black;
+  }
+
+  .search {
+    position: fixed;
+    z-index: 1000;
+    top: 50%;
+    left: 50%;
+    zoom: 2;
+    transform: translate(-50%, -100%);
+  }
 }
 
 .app_weather_clear {
@@ -69,17 +95,18 @@
   grid-column: 2;
   grid-row: 2;
   grid-template-areas:
-        'date .'
+        'date date'
         'city favs';
-  grid-template-columns: 1fr minmax(auto, 300px);
+  grid-template-columns: 1fr minmax(auto, 250px);
   row-gap: 16px;
 }
 
-.app__main_mono {
+.app__main_column_single {
   grid-template-areas:
           'date'
           'city';
   grid-template-columns: 1fr;
+  grid-template-rows: max-content;
 }
 
 .app__favs {
