--- a/src/assets/styles/mixins.scss
+++ b/src/assets/styles/mixins.scss
@@ -1,3 +1,9 @@
+@mixin core-grid {
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr;
+  grid-template-rows: auto 1fr auto;
+}
+
 @mixin complex-border($bg-color: linear-gradient(
                     60deg,
                     hsl(224deg 85% 66%),
